# ph-law-rag

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
app/: config.py  db.py
app/api/: health_query.py  main.py  routes_query.py
app/cli/: main.py
app/indexing/: bm25_store.py  chunker.py  embedder.py  index_service.py  vector_store.py
app/ingestion/: fetcher.py  hashing.py  normalizer.py  parser.py  storage.py  sync.py
app/ui/: app.py
docs/: project_plan.md
sources/: ph_law_sources.yaml
