[project]
name = "ph-law-rag"
version = "0.1.0"
description = "A RAG Project using PH Law"
requires-python = ">=3.11"
dependencies = [
 "fastapi>=0.136.0",
 "pydantic>=2.13.3",
 "pydantic-settings>=2.14.0",
 "streamlit>=1.56.0",
 "typer>=0.24.2",
 "uvicorn>=0.46.0",
]

[project.scripts]
raglab = "app.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
